...
            "state" : "translated",
            "value" : "Nueva actividad"
          }
        }
      }
    },
    "New Activity" : {
      "localizations" : {
        "es-MX" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nueva actividad"
          }
...
            "state" : "translated",
            "value" : "%lld plantillas"
          }
        }
      }
    },
    "Plans" : {
      "localizations" : {
        "es-MX" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Planes"
          }
...
            "state" : "translated",
            "value" : "Con reflexión"
          }
        }
      }
    },
    "Reflection" : {
      "extractionState" : "stale",
      "localizations" : {
        "es-MX" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reflexión"
...
            "state" : "translated",
            "value" : "Plan programado"
          }
        }
      }
    },
    "Schedule Templates" : {
      "extractionState" : "stale",
      "localizations" : {
        "es-MX" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Planes programados"
...
            "state" : "translated",
            "value" : "Aún no hay ejercicios"
          }
        }
      }
    },
    "session.finish_workout.action" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Finish & Save"
          }
        },
        "es-MX" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Finalizar y guardar"
...
